--- a/main.html
+++ b/main.html
@@ -8,7 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<table>
+		<caption> Student Details</caption>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<tr>
+			<th>Shaw</th>
+			<th>20</th>
+			<th>CSE</th>
+		</tr>
+	</table>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
