--- a/main.html
+++ b/main.html
@@ -20,6 +20,11 @@
 			<th>20</th>
 			<th>CSE</th>
 		</tr>
+		<tr>
+			<th>Adit</th>
+			<th>21</th>
+			<th>ECE</th>
+		</tr>
 	</table>
 	<script type="text/javascript" src="./script.js">
 </script>
