--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
 			<th>BRANCH</th>
 		</tr>
 		<tr>
-			<th>Shaw</th>
-			<th>20</th>
-			<th>CSE</th>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
 		</tr>
 		<tr>
-			<th>Adit</th>
-			<th>21</th>
-			<th>ECE</th>
+			<td>Adit</td>
+			<td>21</td>
+			<td>ECE</td>
 		</tr>
 	</table>
 	<script type="text/javascript" src="./script.js">
