--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<table>
 		<caption> Student Details</caption>
 		<tr>
-			<th>NAME</th>
+			<b><th>NAME</th>
 			<th>AGE</th>
-			<th>BRANCH</th>
+			<th>BRANCH</th></b>
 		</tr>
 		<tr>
 			<td>Shaw</td>
