--- a/main.html
+++ b/main.html
@@ -10,16 +10,18 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		<caption> Student Details</caption>
-		<tr>
-			<b><th>NAME</th>
+		<thead>
+			<th>NAME</th>
 			<th>AGE</th>
-			<th>BRANCH</th></b>
-		</tr>
-		<tr>
-			<td>Shaw</td>
-			<td>20</td>
-			<td>CSE</td>
-		</tr>
+			<th>BRANCH</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Shaw</td>
+				<td>20</td>
+				<td>CSE</td>
+			</tr>
+		</tbody>
 		<tr>
 			<td>Adit</td>
 			<td>21</td>
