--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-		<caption> Student Details</caption>
+		<caption> <b>Student Details</b></caption>
 		<thead>
 			<th>NAME</th>
 			<th>AGE</th>
